# email-triage-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  requirements.txt  validate-submission.sh
.github/workflows/: ci.yml  docker-build.yml
email_triage_env/: __init__.py  client.py  email_data.py  evaluation.py  inference.py  models.py  pyproject.toml
email_triage_env/server/: Dockerfile  __init__.py  __main__.py  app.py  email_triage_env_environment.py  requirements.txt
founderforge_env/: Dockerfile  __init__.py  business.py  openenv.yaml  pyproject.toml
founderforge_env/founderforge_env/: business.py  evaluation.py  models.py
founderforge_env/founderforge_env/server/: app.py  environment.py
founderforge_env/founderforge_env/static/: index.html
founderforge_env/server/: app.py
founderforge_env/tests/: test_business_logic.py  test_environment_actions.py
server/: app.py
tests/: test_evaluation.py
